--- a/final/FinalProject/FinalProject.csproj
+++ b/final/FinalProject/FinalProject.csproj
@@ -1,4 +1,3 @@
-
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
@@ -7,5 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="SixLabors.ImageSharp">
+        <HintPath>CSE 210\\cse210-projects\\final\\ExifLib\\exiflib.1.7.0\\lib\\net45\\ExifLib.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 
 </Project>
